--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/send": "^0.17.1",
     "@types/type-is": "^1.6.3",
     "@types/vary": "^1.1.0",
+    "@types/ws": "^8.5.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
@@ -49,6 +50,7 @@
     "qs": "^6.11.2",
     "send": "^0.18.0",
     "type-is": "^1.6.18",
-    "vary": "^1.1.2"
+    "vary": "^1.1.2",
+    "ws": "^8.13.0"
   }
 }
