--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
   },
   "exclude": [
     "**/*.test.ts",
-    "**/node_modules/**",
-    "testLocal/**"
+    "**/node_modules/**"
   ],
   "ts-node": {
     "files": true,
