add static files
Signed-off-by: Matheus Sampaio Queiroga <srherobrine20@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@types/content-disposition": "^0.5.5",
     "@types/content-type": "^1.1.5",
     "@types/cookie": "^0.5.1",
+    "@types/encodeurl": "^1.0.0",
+    "@types/escape-html": "^1.0.2",
     "@types/finalhandler": "^1.2.0",
     "@types/node": "^20.4.6",
     "@types/proxy-addr": "^2.0.0",
     "@types/qs": "^6.9.7",
+    "@types/range-parser": "^1.2.4",
     "@types/send": "^0.17.1",
     "@types/type-is": "^1.6.3",
     "@types/vary": "^1.1.0",
