--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/accepts": "^1.3.5",
+    "@types/busboy": "^1.5.0",
     "@types/content-disposition": "^0.5.5",
     "@types/content-type": "^1.1.5",
     "@types/cookie": "^0.5.1",
@@ -44,6 +45,7 @@
   },
   "dependencies": {
     "accepts": "^1.3.8",
+    "busboy": "^1.6.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
