add exports, body limits and comments
Signed-off-by: Matheus Sampaio Queiroga <srherobrine20@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     ]
   },
   "exclude": [
+    "export/**",
+    "**/*.cjs",
+    "**/*.mjs",
     "**/*.test.ts",
     "**/testLocal/**",
     "**/node_modules/**"
