--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "version": "2.0.0",
   "author": "Matheus Sampaio Queiroga <srherobrine20@gmail.com>",
   "license": "MIT",
-  "repository": "Sirherobrine23/neste",
+  "type": "commonjs",
+  "main": "./export/index.cjs",
+  "module": "./export/index.mjs",
+  "types": "./export/index.d.cjs",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sirherobrine23/neste.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sirherobrine23/neste/issues"
+  },
   "keywords": [
     "express",
     "framework",
@@ -18,11 +28,11 @@
     "api"
   ],
   "engines": {
-    "node": ">= 12.0"
+    "node": ">= 14.0"
   },
   "scripts": {
     "prepack": "tsc --build --clean && tsc --build",
-    "dev": "tsc --build --clean && tsc --build && node testLocal/index.js"
+    "postpack": "tsc --build --clean"
   },
   "devDependencies": {
     "@types/accepts": "^1.3.5",
@@ -33,7 +43,7 @@
     "@types/encodeurl": "^1.0.0",
     "@types/escape-html": "^1.0.2",
     "@types/finalhandler": "^1.2.0",
-    "@types/node": "^20.4.6",
+    "@types/node": "^20.4.9",
     "@types/proxy-addr": "^2.0.0",
     "@types/qs": "^6.9.7",
     "@types/range-parser": "^1.2.4",
