--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
   "name": "neste",
   "description": "a express fork",
-  "version": "2.0.6",
+  "version": "3.0.0",
   "author": "Matheus Sampaio Queiroga <srherobrine20@gmail.com>",
   "license": "MIT",
-  "type": "commonjs",
-  "main": "./export/index.cjs",
-  "types": "./export/index.d.ts",
-  "default": "./export/index.mjs",
-  "exports": {
-    ".": {
-      "require": "./export/index.cjs",
-      "default": "./export/index.mjs",
-      "types": "./export/index.d.ts"
-    }
-  },
+  "type": "module",
+  "main": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sirherobrine23/neste.git"
@@ -42,38 +33,17 @@
     "postpack": "tsc --build --clean"
   },
   "devDependencies": {
-    "@types/accepts": "^1.3.5",
-    "@types/busboy": "^1.5.0",
-    "@types/content-disposition": "^0.5.5",
-    "@types/content-type": "^1.1.5",
-    "@types/cookie": "^0.5.1",
-    "@types/encodeurl": "^1.0.0",
-    "@types/escape-html": "^1.0.2",
-    "@types/finalhandler": "^1.2.0",
-    "@types/node": "^20.4.9",
-    "@types/proxy-addr": "^2.0.0",
-    "@types/qs": "^6.9.7",
-    "@types/range-parser": "^1.2.4",
-    "@types/send": "^0.17.1",
-    "@types/type-is": "^1.6.3",
-    "@types/vary": "^1.1.0",
-    "@types/ws": "^8.5.5",
+    "@types/busboy": "^1.5.2",
+    "@types/cookie": "^0.5.3",
+    "@types/node": "^20.8.8",
+    "@types/ws": "^8.5.8",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "accepts": "^1.3.8",
     "busboy": "^1.6.0",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.5",
     "cookie": "^0.5.0",
-    "finalhandler": "^1.2.0",
     "path-to-regexp": "^6.2.1",
-    "proxy-addr": "^2.0.7",
-    "qs": "^6.11.2",
-    "send": "^0.18.0",
-    "type-is": "^1.6.18",
-    "vary": "^1.1.2",
-    "ws": "^8.13.0"
+    "ws": "^8.14.2"
   }
 }
