--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "busboy": "^1.6.0",
     "cookie": "^0.5.0",
     "path-to-regexp": "^6.2.1",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "yaml": "^2.3.3"
   }
 }
