--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "type": "module",
   "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sirherobrine23/neste.git"
@@ -16,7 +17,6 @@
   "keywords": [
     "express",
     "framework",
-    "sinatra",
     "web",
     "http",
     "rest",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/busboy": "^1.5.2",
     "@types/cookie": "^0.5.3",
-    "@types/node": "^20.8.8",
+    "@types/node": "^20.8.9",
     "@types/ws": "^8.5.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
