Add next.js middler and Update code
Signed-off-by: Matheus Sampaio Queiroga <srherobrine20@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
   "editor.minimap.enabled": false,
   "editor.detectIndentation": false,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports": "explicit",
+    "source.fixAll": "never"
   },
   "files.exclude": {
     "**/node_modules/": true,
